tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__add_bool_nil.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add_bool_nil.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `Bool`, but rhs has type `Nil`
   ╭─[craftinginterpreters/test/operator/add_bool_nil.lox:1:1]
   │
 1 │ true + nil; // expect runtime error: Operands must be two numbers or two strings.
   │ ──┬─ ┬ ─┬─  
   │   │  │  ╰─── this is of type `Nil`
   │   │  │      
   │   │  ╰────── the operator in question
   │   │         
   │   ╰───────── this is of type `Bool`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
