tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__equals_class.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/equals_class.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
UnexpectedToken { expected: [LParen, String, Number, True, False, Nil, Minus, Bang], actual: Token { kind: Class, loc: craftinginterpreters/test/operator/equals_class.lox:41..46 } }
