tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__less_nonnum_num.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/less_nonnum_num.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `<`: lhs has type `String`, but rhs has type `Number`
   ╭─[craftinginterpreters/test/operator/less_nonnum_num.lox:1:1]
   │
 1 │ "1" < 1; // expect runtime error: Operands must be numbers.
   │ ─┬─ ┬ ┬  
   │  │  │ ╰── this is of type `Number`
   │  │  │    
   │  │  ╰──── the operator in question
   │  │       
   │  ╰─────── this is of type `String`
   │ 
   │ Help: operator `<` can only be applied to numbers
───╯
