tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__less_or_equal_num_nonnum.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/less_or_equal_num_nonnum.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
InvalidBinaryOp { lhs: Number(1.0), op: BinOp { kind: LessEqual, token: Token { kind: LessEqual, loc: craftinginterpreters/test/operator/less_or_equal_num_nonnum.lox:2..4 } }, rhs: String("1"), at: Binary { lhs: Literal(Literal { kind: Number(1.0), token: Token { kind: Number, loc: craftinginterpreters/test/operator/less_or_equal_num_nonnum.lox:0..1 } }), op: BinOp { kind: LessEqual, token: Token { kind: LessEqual, loc: craftinginterpreters/test/operator/less_or_equal_num_nonnum.lox:2..4 } }, rhs: Literal(Literal { kind: String("1"), token: Token { kind: String, loc: craftinginterpreters/test/operator/less_or_equal_num_nonnum.lox:5..8 } }) } }
